Made suggested changes and added Links

--- a/src/views/Warning/Warning.module.css
+++ b/src/views/Warning/Warning.module.css
@@ -10,15 +10,16 @@
   left: 0.5rem;
 }
 
-button {
-  font-size: 1rem;
+.buttonContainer {
   width: 90%;
+  margin: 3rem 0;
+}
+
+.button {
+  width: 100%;
+  font-size: 1rem;
   padding: 1rem;
   cursor: pointer;
   background: none;
   box-shadow: 0.25rem 0.25rem #000;
-}
-
-a {
-  margin-top: 1rem;
 }
