--- a/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
+++ b/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
@@ -27,3 +27,22 @@
 .item:focus .word {
   visibility: visible;
 }
+
+.buttonContainer {
+  display: block;
+}
+
+.errors {
+  color: red;
+  min-height: 1.2rem;
+}
+
+.pass {
+  color: green;
+  list-style-type: '✔ ️';
+}
+
+.fail {
+  color: red;
+  list-style-type: '❌ ️';
+}
