--- a/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
+++ b/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
@@ -3,6 +3,7 @@
 }
 
 .items {
+  display: block;
   columns: 2;
   width: 25rem;
 }
@@ -10,26 +11,19 @@
 .item {
   display: block;
   margin-bottom: 1rem;
-  width: 10rem;
-  height: 1.5rem;
-  border: 0;
-  border-bottom: 1px solid black;
-  cursor: pointer;
-  background: none;
-  text-align: left;
 }
 
 .word {
   visibility: hidden;
 }
 
-.item:hover .word,
-.item:focus .word {
-  visibility: visible;
-}
-
 .buttonContainer {
   display: block;
+}
+
+.neutral {
+  float: inline-start;
+  font-size: medium;
 }
 
 .pass {
@@ -40,4 +34,21 @@
 .fail {
   color: red;
   list-style-type: '❌ ️';
+}
+
+.input {
+  float: inline-end;
+  border: 0;
+  border-bottom: 1px solid black;
+  background: none;
+  cursor: pointer;
+  text-align: left;
+}
+
+.fail .input { 
+  color: red;
+}
+
+.pass .input {
+  color: green;
 }
