--- a/src/components/AddAccount/AddAccount.module.css
+++ b/src/components/AddAccount/AddAccount.module.css
@@ -12,29 +12,26 @@
 }
 
 .menu {
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
-}
-
-.menuItem {
-  padding: 0.25rem;
-  border-top: 1px solid black;
-  border-left: 1px solid black;
+  border: 1px solid black;
 }
 
 .menuTitle {
   background: lightgrey;
   margin: 0;
+  padding: 0.25rem;
 }
 
-.menuLink {
-  display: block;
+.list {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
 }
 
-.visible {
-  visibility: visible;
+.listItem {
+  padding: 0.25rem;
+  border-top: 1px solid black;
 }
 
-.invisible {
+.hidden {
   visibility: hidden;
 }
