--- a/src/components/Settings/Settings.module.css
+++ b/src/components/Settings/Settings.module.css
@@ -1,8 +1,6 @@
 .container {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
-  position: absolute;
-  right: 2rem;
 }
 
 .button {
