--- a/src/views/App/App.module.css
+++ b/src/views/App/App.module.css
@@ -6,3 +6,9 @@ body {
 .container {
   composes: view from "../../components/View/View.module.css";
 }
+
+.menus {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
