--- a/src/components/View/View.module.css
+++ b/src/components/View/View.module.css
@@ -1,5 +1,6 @@
 .view {
   min-width: 480px;
   min-height: 600px;
+  height: 600px;
   background: url("../images/logo.svg") no-repeat center 1.5rem , url("../images/background.png") no-repeat center/contain;
 }
