--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -2,7 +2,9 @@
   composes: buttonText from "../Typography/Typography.module.css";
 
   text-transform: uppercase;
+  text-decoration: none;
   height: 2.25rem;
+  line-height: 2.25rem;
   border: 0;
   border-radius: 1.125rem;
   padding: 0 2rem;
