--- a/src/views/Warning/Warning.module.css
+++ b/src/views/Warning/Warning.module.css
@@ -3,9 +3,44 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  padding: 5rem calc(23.5rem / 16) 0 calc(23.5rem / 16);
 }
 
 .backButton {
   position: absolute;
-  left: 0.5rem;
+  left: 1.5rem;
+  top: 2rem;
+}
+
+.heading {
+  composes: screenHeadline from '../../components/Typography/Typography.module.css';
+  margin: 0;
+}
+
+.hand {
+  padding: 4.5rem;
+  background-image: url('../../components/images/attention-hand.svg');
+  background-size: calc(86rem / 16) calc(118rem / 16);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.important {
+  composes: importantHeadline from '../../components/Typography/Typography.module.css';
+  margin: 0;
+}
+
+.info {
+  composes: subline from '../../components/Typography/Typography.module.css';
+  margin: 0.5rem;
+}
+
+.confirm {
+  composes: buttonPrimary from '../../components/Button/Button.module.css';
+  margin-top: 1.5rem;
+}
+
+.cancel {
+  composes: buttonSecondary from '../../components/Button/Button.module.css';
+  margin-top: 1rem;
 }
