--- a/src/views/Warning/Warning.module.css
+++ b/src/views/Warning/Warning.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  padding: 5rem calc(23.5rem / 16) 0 calc(23.5rem / 16);
+  padding: 5rem 1.5rem 0 1.5rem;
 }
 
 .backButton {
