--- a/src/views/Warning/Warning.module.css
+++ b/src/views/Warning/Warning.module.css
@@ -7,6 +7,7 @@
 }
 
 .backButton {
+  composes: linkBack from '../../components/LinkBack/LinkBack.module.css';
   position: absolute;
   left: 1.5rem;
   top: 2rem;
@@ -14,20 +15,18 @@
 
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
-  margin: 0;
-}
-
-.hand {
-  padding: 4.5rem;
   background-image: url('../../components/images/attention-hand.svg');
   background-size: calc(86rem / 16) calc(118rem / 16);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center 3.25rem;
+  margin: 0;
+  padding-bottom: calc(156rem / 16);
 }
 
 .important {
   composes: importantHeadline from '../../components/Typography/Typography.module.css';
   margin: 0;
+  white-space: pre-line;
 }
 
 .info {
