--- a/src/components/LinkBack/LinkBack.module.css
+++ b/src/components/LinkBack/LinkBack.module.css
@@ -1,5 +1,8 @@
 .linkBack {
   display: inline-block;
+  position: absolute;
+  left: 1.5rem;
+  top: 2rem;
   height: calc(13rem / 16);
   width: 2rem;
   background-image: url('../images/arrow-left.svg');
