--- a/src/views/Warning/Warning.module.css
+++ b/src/views/Warning/Warning.module.css
@@ -3,9 +3,40 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  padding: 5rem 1.5rem 0 1.5rem;
 }
 
 .backButton {
-  position: absolute;
-  left: 0.5rem;
+  composes: linkBack from '../../components/LinkBack/LinkBack.module.css';
+}
+
+.heading {
+  composes: screenHeadline from '../../components/Typography/Typography.module.css';
+  background-image: url('../../components/images/attention-hand.svg');
+  background-size: calc(86rem / 16) calc(118rem / 16);
+  background-repeat: no-repeat;
+  background-position: center 3.25rem;
+  margin: 0;
+  padding-bottom: calc(156rem / 16);
+}
+
+.important {
+  composes: importantHeadline from '../../components/Typography/Typography.module.css';
+  margin: 0;
+  white-space: pre-line;
+}
+
+.info {
+  composes: subline from '../../components/Typography/Typography.module.css';
+  margin: 0.5rem;
+}
+
+.confirm {
+  composes: buttonPrimary from '../../components/Button/Button.module.css';
+  margin-top: 1.5rem;
+}
+
+.cancel {
+  composes: buttonSecondary from '../../components/Button/Button.module.css';
+  margin-top: 1rem;
 }
