--- a/src/views/SaveBackupPhrase/SaveBackupPhrase.module.css
+++ b/src/views/SaveBackupPhrase/SaveBackupPhrase.module.css
@@ -1,29 +1,93 @@
 .container {
-  padding-top: 1rem;
+  padding: 5rem 1.5rem 0 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.heading {
+  composes: screenHeadline from '../../components/Typography/Typography.module.css';
+  margin: 0;
+}
+
+.subheading {
+  composes: subline from '../../components/Typography/Typography.module.css';
+  text-align: center;
+  margin: 0 0 1rem;
+}
+
+.counter {
+  composes: smallImportant from '../../components/Typography/Typography.module.css';
+  font-size: 1.125rem;
+  width: 1.875rem;
+  display: inline-block;
 }
 
 .items {
   columns: 2;
-  width: 25rem;
+  width: 17.85rem;
 }
 
 .item {
   display: block;
-  margin-bottom: 1rem;
-  width: 10rem;
+  margin-bottom: 1.125rem;
+  width: 8.5rem;
   height: 1.5rem;
   border: 0;
-  border-bottom: 1px solid black;
+  border-bottom: 2px dashed #f2efee;
   cursor: pointer;
   background: none;
   text-align: left;
+  position: relative;
 }
 
 .word {
-  visibility: hidden;
+  composes: subline from '../../components/Typography/Typography.module.css';
+  font-size: 1rem;
+  filter: blur(3px);
+}
+
+.eye {
+  height: 0.7rem;
+  width: 1.125rem;
+  background-image: url('../../components/images/eye-closed.svg');
+  background-size: 1.1rem 0.7rem;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  top: 0.3rem;
+}
+
+.item:hover .eye,
+.item:focus .eye {
+  opacity: 0;
 }
 
 .item:hover .word,
 .item:focus .word {
-  visibility: visible;
+  filter: none;
+}
+
+.buttons {
+  width: 18rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.create {
+  composes: buttonPrimary from '../../components/Button/Button.module.css';
+  margin-top: 1.25rem;
+  display: inline-block;
+}
+
+.cancel {
+  composes: buttonSecondary from '../../components/Button/Button.module.css';
+  margin-top: 1.25rem;
+  width: 4.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
