--- a/src/components/View/View.module.css
+++ b/src/components/View/View.module.css
@@ -2,5 +2,8 @@
   min-width: 480px;
   min-height: 600px;
   height: 600px;
-  background: url("../images/logo.svg") no-repeat center 1.5rem , url("../images/background.png") no-repeat center/contain;
+  background: url('../images/logo.svg') no-repeat center 1.5rem,
+    url('../images/background.png') no-repeat center/contain;
+  padding: 5rem 1.5rem 0 1.5rem;
+  box-sizing: border-box;
 }
