--- a/src/components/Settings/Settings.module.css
+++ b/src/components/Settings/Settings.module.css
@@ -1,30 +1,10 @@
-.container {
+.toggle {
+  composes: toggle from '../../components/Menu/Menu.module.css';
+
   display: inline-flex;
-  flex-direction: column;
-}
-
-.button {
-  align-self: flex-end;
-}
-
-.menu {
-  width: 10rem;
-  border: 1px solid black;
-}
-
-.menuHeading {
-  background: lightgrey;
-  margin: 0;
-  padding: 0.25rem;
-}
-
-.list {
-  list-style: none;
-  padding-left: 0;
-  margin: 0;
-}
-
-.listItem {
-  padding: 0.25rem;
-  border-top: 1px solid black;
+  width: 1.625rem;
+  height: 1.625rem;
+  border: 0;
+  padding: 0;
+  background: url('../../components/images/settings.svg') no-repeat center;
 }
