disable view decorator for app stories

--- a/src/views/Welcome/Welcome.module.css
+++ b/src/views/Welcome/Welcome.module.css
@@ -4,6 +4,8 @@
   align-items: center;
   justify-content: center;
   height: 100%;
+  padding-bottom: 5rem;
+  box-sizing: border-box;
 }
 
 .heading {
