--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -13,7 +13,7 @@
   top: -0.375rem;
   right: -0.375rem;
 
-  width: 10rem;
+  width: calc(180rem / 16);
 
   /* following generates the menu footer */
   --footer-height: 0.375rem;
@@ -41,7 +41,7 @@
   background: linear-gradient(0, var(--gradient-start) 0%, var(--gradient-end) 100%);
   color: var(--color-grey-light);
   margin: 0;
-  padding: 0.5rem;
+  padding: 0.5rem 0.75rem;
   height: var(--item-height);
   line-height: var(--item-height);
   border-bottom: 1px solid #352b3e;
@@ -58,10 +58,10 @@
   composes: subline from '../Typography/Typography.module.css';
   font-size: calc(11rem / 16);
 
+  display: flex;
   margin: 0;
-  padding: 0.5rem;
-  height: var(--item-height);
-  line-height: var(--item-height);
+  padding: 0.5rem 0.75rem;
+  min-height: var(--item-height);
   border-top: 1px solid #655276;
   border-bottom: 1px solid rgba(0, 0, 0, 0.33);
   cursor: pointer;
@@ -69,4 +69,10 @@
 
 .listItem:hover {
   background-color: rgba(0,0,0,0.2);
+}
+
+.listItem a {
+  margin: auto 0;
+  color: var(--color-grey-light);
+  text-decoration: none;
 }
