--- a/src/views/App/App.module.css
+++ b/src/views/App/App.module.css
@@ -9,6 +9,8 @@ body {
 
 .menus {
   position: absolute;
-  top: 1rem;
-  right: 1rem;
+  top: 1.5rem;
+  right: 1.5rem;
+  display: flex;
+  gap: 1rem;
 }
