--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -13,6 +13,7 @@
     var(--color-pink) 100%
   );
   box-shadow: 0.375rem 0.375rem 0.75rem 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 
 .buttonSecondary {
