--- a/src/components/View/View.module.css
+++ b/src/components/View/View.module.css
@@ -1,6 +1,7 @@
 .view {
   min-width: 480px;
   min-height: 600px;
+  width: 480px;
   height: 600px;
   background: url('../images/logo.svg') no-repeat center 1.5rem,
     url('../images/background.png') no-repeat center/contain;
