--- a/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
+++ b/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
@@ -13,12 +13,11 @@
 .info {
   composes: subline from '../../components/Typography/Typography.module.css';
   text-align: center;
-  margin: 0.5rem;
+  margin: 0.5rem 0 0.5rem 0;
 }
 
 .items {
-  composes: smallImportant from '../../components/Typography/Typography.module.css';
-  font-size: 0.875rem;
+  width: calc(284rem / 16);
   display: block;
   columns: 2;
   list-style-type: decimal-leading-zero;
@@ -26,12 +25,33 @@
   padding-inline-start: 0;
 }
 
-.input {
+.items ::marker {
+  font-family: 'Montserrat Medium', sans-serif;
+  font-size: 0.875rem;
+  color: var(--color-orange);
+}
+
+.item {
   composes: input from '../../components/Input/Input.module.css';
-  width: 5rem;
-  margin-top: 0.75rem;
-  margin-left: -2rem;
-  padding-left: 2.5rem;
+  box-sizing: border-box;
+  position: relative;
+  width: 8.5rem;
+  margin-bottom: 0.75rem;
+  padding-top: 0.5rem;
+}
+
+.input {
+  composes: inputText from '../../components/Typography/Typography.module.css';
+  position: absolute;
+  top: 0.1rem;
+  left: 0;
+  bottom: 0.1rem;
+  width: 4.5rem;
+  height: calc(100% - 0.2rem);
+  padding-left: 3rem;
+  padding-right: 1rem;
+  background: none;
+  border: 0;
   text-align: left;
 }
 
