--- a/src/components/useErrorMessage/useErrorTooltip.module.css
+++ b/src/components/useErrorMessage/useErrorTooltip.module.css
@@ -1,10 +1,11 @@
-:root {
+.variables {
   --background: rgba(255, 0, 0, 0.5);
   --arrow: 0.25rem;
   --n-arrow: -0.25rem;
 }
 
 .tooltip {
+  composes: variables;
   display: none;
   margin: 0;
   border-radius: 0.5rem;
@@ -14,6 +15,7 @@
 }
 
 .pointer {
+  composes: variables;
   display: none;
   position: absolute;
   width: 0;
