--- a/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
+++ b/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
@@ -17,15 +17,18 @@
 }
 
 .items {
+  height: calc(264rem / 16);
   width: calc(284rem / 16);
-  display: block;
-  columns: 2;
   list-style-type: decimal-leading-zero;
   list-style-position: inside;
-  padding-inline-start: 0;
+  padding-left: 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
-.items ::marker {
+.item::marker {
+  /* composes: smallImportant from '../../components/Typography/Typography.module.css'; */
   font-family: 'Montserrat Medium', sans-serif;
   font-size: 0.875rem;
   color: var(--color-orange);
@@ -34,25 +37,40 @@
 .item {
   composes: input from '../../components/Input/Input.module.css';
   box-sizing: border-box;
-  position: relative;
   width: 8.5rem;
   margin-bottom: 0.75rem;
-  padding-top: 0.5rem;
+  padding: 0.375rem 1rem;
 }
 
 .input {
   composes: inputText from '../../components/Typography/Typography.module.css';
-  position: absolute;
-  top: 0.1rem;
-  left: 0;
-  bottom: 0.1rem;
+  position: relative;
+  top: -1.625rem;
+  left: -1rem;
   width: 4.5rem;
-  height: calc(100% - 0.2rem);
-  padding-left: 3rem;
-  padding-right: 1rem;
+  height: 2rem;
+  padding-top: 0;
+  border: 0 solid transparent;
+  border-left-width: 3rem;
+  border-right-width: 1rem;
   background: none;
-  border: 0;
-  text-align: left;
+}
+
+.tooltip {
+  composes: tooltip from '../../components/useErrorMessage/useErrorTooltip.module.css';
+  display: inline;
+  position: relative;
+  top: -1.75rem;
+  white-space: nowrap;
+  left: -100%;
+}
+
+.pointer {
+  composes: pointer from '../../components/useErrorMessage/useErrorTooltip.module.css';
+  display: block;
+  position: absolute;
+  top: -.25rem;
+  left: 50%;
 }
 
 .button {
