SK-89 - design import backup phrase (#134)

--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,19 +1,23 @@
 .input {
-  composes: inputText from "../Typography/Typography.module.css";
+  composes: inputText from '../Typography/Typography.module.css';
 
   height: 2rem;
   padding: 0 1rem 0.125rem 1rem;
   border: 0;
   border-radius: 1.125rem;
-  box-shadow: inset 1px 1px 1px 0 rgba(0,0,0,0.4);
-  background-color: var(--color-dark);
+  box-shadow: inset 1px 1px 1px 0 rgba(0, 0, 0, 0.4);
+  background: linear-gradient(
+    140deg,
+    var(--color-pink) 0%,
+    var(--color-dark) 100%
+  );
 }
 
 .inputKiltAmount {
   composes: input;
 
   text-align: right;
-  background-image: url("../images/kilt-coin.svg");
+  background-image: url('../images/kilt-coin.svg');
   background-size: calc(13rem / 16) 1rem;
   background-repeat: no-repeat;
   background-position: calc(100% - 0.75rem) center;
