--- a/src/views/ReceiveToken/ReceiveToken.module.css
+++ b/src/views/ReceiveToken/ReceiveToken.module.css
@@ -13,7 +13,25 @@
   overflow: hidden;
 }
 
+.qrCodeToggle {
+  display: grid;
+  grid-template-areas: 'code';
+  width: 50%;
+  background: none;
+  border: 0;
+  padding: 0;
+}
+
 .qrCode {
   composes: component from '../../components/QRCode/QRCode.module.css';
-  width: 50%;
+  grid-area: code;
+}
+
+.qrCodeToggle:hover .qrCodeShadow,
+.qrCodeToggle:focus .qrCodeShadow {
+  grid-area: code;
+  background: rgba(0, 0, 0, 0.7) url('../../components/images/search.svg') center center/1.5rem no-repeat;
+  border: 0;
+  position: relative;
+  cursor: pointer;
 }
