--- a/src/views/App/App.css
+++ b/src/views/App/App.css
@@ -1,5 +1,7 @@
 /* Note this is not a CSS Modules file, the styles here will be applied globally */
 
+@import '~dialog-polyfill/dist/dialog-polyfill.css';
+
 :root {
   --color-pink: #8C145A;
   --color-orange: #EF5A28;
