popup size variables

--- a/src/components/View/View.module.css
+++ b/src/components/View/View.module.css
@@ -1,10 +1,12 @@
 .view {
-  min-width: 480px;
-  min-height: 600px;
-  width: 480px;
-  height: 600px;
-  max-width: 480px;
-  max-height: 600px;
+  min-width: var(--popup-width);
+  width: var(--popup-width);
+  max-width: var(--popup-width);
+
+  min-height: var(--popup-height);
+  height: var(--popup-height);
+  max-height: var(--popup-height);
+
   background: url('../images/logo.svg') no-repeat center 1.5rem,
     url('../images/background.png') no-repeat center/contain;
   padding: 5rem 1.5rem 0 1.5rem;
