--- a/src/views/App/App.css
+++ b/src/views/App/App.css
@@ -12,6 +12,10 @@
   --color-grey-medium: #A8A8A8;
   --color-black: black;
   --color-white: white;
+
+  --popup-width: 480px;
+  --popup-height: 600px;
+
   font-size: 16px;
 }
 
