--- a/src/views/App/App.css
+++ b/src/views/App/App.css
@@ -1,37 +1,40 @@
 /* Note this is not a CSS Modules file, the styles here will be applied globally */
 
 :root {
-  --color-pink: #8C145A;
-  --color-orange: #EF5A28;
-  --color-dark: #4F405C;
-  --color-green: #5AB9AA;
-  --color-light: #C8E3EE;
-  --color-grey-light: #F2EFEE;
-  --color-grey-medium: #A8A8A8;
+  --color-pink: #8c145a;
+  --color-orange: #ef5a28;
+  --color-orange-dark: #ba4822;
+  --color-dark: #4f405c;
+  --color-green: #5ab9aa;
+  --color-green-dark: #387067;
+  --color-light: #c8e3ee;
+  --color-grey-light: #f2efee;
+  --color-grey-medium: #a8a8a8;
+  --color-grey-dark: #6c6b6b;
   --color-black: black;
   --color-white: white;
   font-size: 16px;
 }
 
 @font-face {
-  font-family: "Montserrat Bold";
+  font-family: 'Montserrat Bold';
   font-weight: bold;
-  src: url("./fonts/Montserrat-Bold.woff2") format("woff2");
+  src: url('./fonts/Montserrat-Bold.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: "Montserrat SemiBold";
+  font-family: 'Montserrat SemiBold';
   font-weight: 600;
-  src: url("./fonts/Montserrat-SemiBold.woff2") format("woff2");
+  src: url('./fonts/Montserrat-SemiBold.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: "Montserrat Medium";
+  font-family: 'Montserrat Medium';
   font-weight: 500;
-  src: url("./fonts/Montserrat-Medium.woff2") format("woff2");
+  src: url('./fonts/Montserrat-Medium.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: "Roboto Mono";
-  src: url(fonts/Roboto-Mono.woff2) format("woff2");
+  font-family: 'Roboto Mono';
+  src: url(fonts/Roboto-Mono.woff2) format('woff2');
 }
