--- a/src/views/VerifyBackupPhrase/VerifyBackupPhrase.module.css
+++ b/src/views/VerifyBackupPhrase/VerifyBackupPhrase.module.css
@@ -5,42 +5,120 @@
   text-align: center;
 }
 
-.selectedWordsContainer {
-  min-height: 6rem;
+.info {
+  composes: subline from '../../components/Typography/Typography.module.css';
+  margin: 0.5rem 0.5rem 1.5rem 0.5rem;
 }
 
-.button {
-  padding: 0.5rem 2rem;
-  margin: 0.1rem;
-  background: none;
+.heading {
+  composes: screenHeadline from '../../components/Typography/Typography.module.css';
+  margin: 0;
+}
+
+.selectedWords {
+  composes: input from '../../components/Input/Input.module.css';
   position: relative;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: flex-start;
+  align-content: flex-start;
+  flex-wrap: wrap;
+  width: 100%;
+  height: calc(120rem / 16);
+  padding: calc(calc(18rem / 16) - calc(3rem / 16)) 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.selectableWords {
+  margin-bottom: calc(88rem / 16);
+}
+
+.word {
+  composes: balanceText from '../../components/Typography/Typography.module.css';
+  position: relative;
+  width: calc(94rem / 16);
+  height: 1.5rem;
+  border: none;
+  border-radius: calc(3rem / 16);
+  box-shadow: 0.0625rem 0.0625rem 0.0625rem 0 rgba(0, 0, 0, 0.4);
+  margin: calc(3rem / 16);
+  background: linear-gradient(
+    180deg,
+    var(--color-grey-medium) 0%,
+    var(--color-grey-dark) 100%
+  );
+  color: var(--color-dark);
   cursor: pointer;
-  color: white;
+}
+
+.wordContainer:disabled {
+  opacity: 35%;
 }
 
 .correct {
-  border: 2px solid green;
+  composes: smallText from '../../components/Typography/Typography.module.css';
+  background: linear-gradient(
+    180deg,
+    var(--color-green) 0%,
+    var(--color-green-dark) 100%
+  );
+  color: var(--color-grey-light);
 }
 
-.correct::after {
-  content: '✔';
-  color: green;
+.index {
+  composes: inputText from '../../components/Typography/Typography.module.css';
   position: absolute;
-  right: 0.1rem;
   top: 0;
+  left: calc(3rem / 16);
+  font-size: calc(10rem / 16);
+  color: var(--color-dark);
 }
 
 .incorrect {
-  border: 2px solid red;
+  background: linear-gradient(
+    180deg,
+    var(--color-orange) 0%,
+    var(--color-orange-dark) 100%
+  );
+  color: var(--color-grey-light);
 }
 
 .incorrect::after {
-  content: '❌';
+  content: 'x';
+  font-size: 0.4rem;
+  width: 0.55rem;
+  height: 0.55rem;
+  line-height: 0.55rem;
+  border: 0.0625rem solid rgba(0, 0, 0, 0.5);
+  box-shadow: 0.0625rem 0.0625rem 0.0625rem 0 rgba(0, 0, 0, 0.4);
+  border-radius: 50%;
+  background: var(--color-orange);
   position: absolute;
-  right: 0.1rem;
-  top: 0;
+  right: -0.25rem;
+  top: -0.25rem;
 }
 
-.error {
-  color: red;
+.tooltip {
+  composes: tooltip from '../../components/useErrorMessage/useErrorTooltip.module.css';
+  display: inline;
+  position: absolute;
+  right: 0;
+  bottom: -0.75rem;
+}
+
+.pointer {
+  composes: pointer from '../../components/useErrorMessage/useErrorTooltip.module.css';
+  display: block;
+  position: absolute;
+  top: -0.25rem;
+  right: 1rem;
+}
+
+.cancel {
+  composes: buttonSecondary from '../../components/Button/Button.module.css';
+}
+
+.submit {
+  composes: buttonPrimary from '../../components/Button/Button.module.css';
+  margin-left: 1rem;
 }
