--- a/src/views/ReceiveToken/ReceiveToken.module.css
+++ b/src/views/ReceiveToken/ReceiveToken.module.css
@@ -12,3 +12,52 @@
   border: 1px solid black;
   overflow: hidden;
 }
+
+.qrCodeToggle {
+  display: grid;
+  grid-template-areas: 'code';
+  width: 30%;
+  background: none;
+  border: 0;
+  padding: 0;
+}
+
+.qrCode {
+  composes: component from '../../components/QRCode/QRCode.module.css';
+  grid-area: code;
+}
+
+.qrCodeToggle:hover .qrCodeShadow,
+.qrCodeToggle:focus .qrCodeShadow {
+  grid-area: code;
+  background: rgba(0, 0, 0, 0.7) url('../../components/images/search.svg') center center/1.5rem no-repeat;
+  border: 0;
+  position: relative;
+  cursor: pointer;
+}
+
+.qrCodeLarge {
+  width: calc(var(--popup-width) - 4rem);
+  display: inline-block;
+}
+
+.dialog {
+  border: 0;
+  overflow: visible;
+}
+
+.dialog::backdrop,
+.dialog + :global(.backdrop) {
+  background: rgba(0, 0, 0, 0.7);
+}
+
+.dialogClose {
+  position: absolute;
+  top: -2rem;
+  right: 0;
+  border: 0;
+  width: 1.5rem;
+  height: 1.5rem;
+  background: transparent url('../../components/images/plus-circle.svg') no-repeat;
+  transform: rotate(45deg);
+}
