refactor: move button styles to button module

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -24,4 +24,7 @@
   padding: 0 2rem;
   background: none;
   text-decoration: underline;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
