almost proper design

--- a/src/views/CreatePassword/CreatePassword.module.css
+++ b/src/views/CreatePassword/CreatePassword.module.css
@@ -1,14 +1,62 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.heading {
+  composes: screenHeadline from '../../components/Typography/Typography.module.css';
+  margin: 0;
+}
+
+.subline {
+  composes: subline from '../../components/Typography/Typography.module.css';
+  margin: 0;
+  line-height: 1.25rem;
+}
+
+.criteriaHeading {
+  composes: importantHeadline from '../../components/Typography/Typography.module.css';
+  margin: 0;
+  margin-top: 1rem;
+}
+
+.criteria {
+  composes: errorText from '../../components/Typography/Typography.module.css';
+  font-size: 0.75rem;
+  color: var(--color-orange);
+  list-style: none;
+  margin-top: 0.375rem;
+  margin-bottom: 0.375rem;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .pass {
-  color: green;
-  list-style-type: '✔ ️';
+  color: var(--color-grey-light);
+  padding: 0 1.125rem;
+  background: url('../../components/images/checkmark-circle.svg') no-repeat right 75%/0.75rem;
 }
 
-.fail {
-  color: red;
-  list-style-type: '❌ ️';
+.inputLine {
+  display: inline-block;
+  position: relative;
 }
 
-.errors {
-  color: red;
-  min-height: 1.2rem;
+.input {
+  composes: input from '../../components/Input/Input.module.css';
+  width: calc(230rem / 16);
+  padding-right: 2.5rem;
+}
+
+.cancel {
+  composes: buttonSecondary from '../../components/Button/Button.module.css';
+  margin-right: 1rem;
+}
+
+.submit {
+  composes: buttonPrimary from '../../components/Button/Button.module.css';
 }
