--- a/src/views/CreatePassword/CreatePassword.module.css
+++ b/src/views/CreatePassword/CreatePassword.module.css
@@ -60,3 +60,62 @@
 .submit {
   composes: buttonPrimary from '../../components/Button/Button.module.css';
 }
+
+.complexity {
+  --color-yellow: #fef601;
+
+  width: calc(100px);
+  height: calc(100px);
+  margin: 1.5rem auto;
+  display: grid;
+  grid-template-areas: 'self';
+}
+
+.complexity::before {
+  grid-area: self;
+  content: '';
+  clip-path: path('m 0 51.82677 l 0 0 c 0 -28.623135 23.203636 -51.82677 51.82677 -51.82677 l 0 0 c 13.745312 0 26.927654 5.4603047 36.64706 15.17971 c 9.719406 9.719404 15.17971 22.901749 15.17971 36.64706 l 0 0 c 0 28.623135 -23.203636 51.82677 -51.82677 51.82677 l 0 0 c -28.623135 0 -51.82677 -23.203636 -51.82677 -51.82677 z m 25.913385 0 l 0 0 c 0 14.311565 11.60182 25.913387 25.913385 25.913387 c 14.311565 0 25.913387 -11.601822 25.913387 -25.913387 c 0 -14.311565 -11.601822 -25.913385 -25.913387 -25.913385 l 0 0 c -14.311565 0 -25.913385 11.60182 -25.913385 25.913385 z')
+}
+
+.complexityNone::before {
+  background: var(--color-orange);
+}
+
+.complexityPoor::before {
+  background-image: conic-gradient(from 180deg at center, var(--color-orange), var(--color-yellow));
+}
+
+.complexityMedium::before {
+  background: var(--color-yellow);
+}
+
+.complexityGood::before {
+  background-image: conic-gradient(from 180deg at center, var(--color-yellow), var(--color-green));
+}
+
+.complexityOk::before {
+  background: var(--color-green);
+}
+
+.lock {
+  grid-area: self;
+  margin: auto;
+  width: calc(57rem / 16);
+  height: calc(64rem / 16);
+  background: no-repeat center center/contain;
+  clip-path: url('../../components/images/lock-alt.svg#clipPath');
+}
+
+.complexityNone .lock,
+.complexityPoor .lock {
+  background: var(--color-orange);
+}
+
+.complexityMedium .lock,
+.complexityGood .lock {
+  background: var(--color-yellow);
+}
+
+.complexityOk .lock {
+  background: var(--color-green);
+}
