--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -6,20 +6,30 @@
   border: 0;
   border-radius: 1.125rem;
   box-shadow: inset 1px 1px 1px 0 rgba(0, 0, 0, 0.4);
-  background: linear-gradient(
+  background-image: linear-gradient(
     140deg,
     var(--color-pink) 0%,
     var(--color-dark) 100%
   );
 }
 
+.input::placeholder {
+  color: var(--color-grey-medium);
+}
+
 .inputKiltAmount {
   composes: input;
 
   text-align: right;
-  background-image: url('../images/kilt-coin.svg');
-  background-size: calc(13rem / 16) 1rem;
+  background-image:
+    url('../images/kilt-coin.svg'),
+    linear-gradient(
+      140deg,
+      var(--color-pink) 0%,
+      var(--color-dark) 100%
+    );
+  background-size: calc(13rem / 16) 1rem, auto;
   background-repeat: no-repeat;
-  background-position: calc(100% - 0.75rem) center;
+  background-position: calc(100% - 0.75rem) center, 0;
   padding-right: 2rem;
 }
