added class names for tartans

--- a/src/components/Avatar/Avatar.module.css
+++ b/src/components/Avatar/Avatar.module.css
@@ -143,6 +143,10 @@
   background-image: url('../images/tartans/MacKenzie.png');
 }
 
+.MacKinnon {
+  background-image: url('../images/tartans/MacKinnon.png');
+}
+
 .MacKintosh {
   background-image: url('../images/tartans/MacKintosh.png');
 }
