--- a/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
+++ b/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
@@ -40,6 +40,7 @@
   width: 8.5rem;
   margin-bottom: 0.75rem;
   padding: 0.375rem 1rem;
+  position: relative;
 }
 
 .input {
@@ -58,11 +59,15 @@
 
 .tooltip {
   composes: tooltip from '../../components/useErrorMessage/useErrorTooltip.module.css';
-  display: inline;
-  position: relative;
-  top: -1.75rem;
+  position: absolute;
+  top: 2.125rem;
   white-space: nowrap;
-  left: -100%;
+  left: -50%;
+  z-index: 1;
+}
+
+.input:not(:focus) + .tooltip {
+  display: inline;
 }
 
 .pointer {
