--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -66,10 +66,21 @@
 }
 
 .listItem:hover {
-  background-color: rgba(0,0,0,0.2);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
-.listItem a, .listItem button {
+.listButton {
+  composes: subline from '../Typography/Typography.module.css';
+  font-size: calc(11rem / 16);
+  border: 0;
+  padding: 0.5rem 0.75rem;
+  min-height: calc(var(--item-height) + 0.5rem * 2);
+  text-align: left;
+  background: none;
+  cursor: pointer;
+}
+
+.listItem a {
   display: flex;
   min-height: var(--item-height);
   padding: 0.5rem 0.75rem;
