--- a/src/components/Avatar/Avatar.module.css
+++ b/src/components/Avatar/Avatar.module.css
@@ -3,7 +3,7 @@
   height: calc(96rem / 16);
   background-size: 100%;
   background-repeat: no-repeat;
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
