--- a/src/components/AccountSlide/AccountSlide.module.css
+++ b/src/components/AccountSlide/AccountSlide.module.css
@@ -1,8 +1,12 @@
-.nameContainer {
+.slideInfo {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
+}
+
+.nameContainer {
+  position: relative;
 }
 
 .name {
