--- a/src/components/KiltCurrency/KiltCurrency.module.css
+++ b/src/components/KiltCurrency/KiltCurrency.module.css
@@ -1,12 +1,7 @@
 .coin {
   background-image: url('../images/kilt-coin-circle.svg');
-  width: 1.25rem;
-  height: 1.25rem;
-  margin-left: 0.25rem;
-}
-
-.small {
-  width: 0.75rem;
-  height: 0.75rem;
+  width: 1em;
+  height: 1em;
   background-size: 100%;
+  margin-left: 0.25em;
 }
