--- a/src/components/AccountOptions/AccountOptions.module.css
+++ b/src/components/AccountOptions/AccountOptions.module.css
@@ -1,17 +1,20 @@
+.wrapper {
+  display: inline-block;
+  margin-left: 0.5rem;
+}
+
 .toggle {
   composes: toggle from '../../components/Menu/Menu.module.css';
 
-  position: absolute;
-  top: -0.25rem;
-  right: 0;
   display: inline-flex;
   width: 1.625rem;
   height: 1.625rem;
   border: 0;
   padding: 0;
-  background: url('../../components/images/chevron-down.svg') no-repeat center/0.75rem;
+  background: url('../../components/images/chevron-down.svg') no-repeat
+    center/0.75rem;
 }
 
-.toggle[aria-expanded=true] {
+.toggle[aria-expanded='true'] {
   transform: rotate(180deg);
 }
