--- a/src/components/AccountSlide/AccountSlide.module.css
+++ b/src/components/AccountSlide/AccountSlide.module.css
@@ -1,14 +1,9 @@
-.slideInfo {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-}
-
-.nameContainer {
-  position: relative;
-}
-
 .name {
   composes: accountText from '../../components/Typography/Typography.module.css';
+  position: relative;
+  padding-left: 2.125rem;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
