--- a/src/components/AccountsCarousel/AccountsCarousel.module.css
+++ b/src/components/AccountsCarousel/AccountsCarousel.module.css
@@ -1,21 +1,21 @@
 .container {
-  width: calc(232rem / 16);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   position: relative;
-  margin-bottom: calc(58rem / 16);
+  width: 100%;
 }
 
 .chevron {
+  position: absolute;
+  top: 2rem;
   width: 1rem;
   height: 2rem;
 }
 
 .left {
   background-image: url('../images/chevron-left.svg');
+  left: 6.25rem;
 }
 
 .right {
   background-image: url('../images/chevron-right.svg');
+  right: 6.25rem;
 }
