small fixes for account options menu

--- a/src/components/AccountOptions/AccountOptions.module.css
+++ b/src/components/AccountOptions/AccountOptions.module.css
@@ -1,7 +1,12 @@
 .wrapper {
   composes: wrapper from '../../components/Menu/Menu.module.css';
-  display: inline-block;
+  display: inline-flex;
   margin-left: 0.5rem;
+}
+
+.heading {
+  composes: heading from '../../components/Menu/Menu.module.css';
+  text-align: left;
 }
 
 .toggle {
