Small fixes for account options menu (#191)

--- a/src/components/AccountOptions/AccountOptions.module.css
+++ b/src/components/AccountOptions/AccountOptions.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   composes: wrapper from '../../components/Menu/Menu.module.css';
-  display: inline-block;
+  display: inline-flex;
   margin-left: 0.5rem;
 }
 
