--- a/src/components/Avatar/Avatar.module.css
+++ b/src/components/Avatar/Avatar.module.css
@@ -16,8 +16,7 @@
 }
 
 .new {
-  background: url('../images/plus-circle.svg') no-repeat center/100%;
-  background-color: var(--color-dark);
+  background: var(--color-dark) url('../images/plus-circle.svg') no-repeat center/100%;
   border-radius: 50%;
   height: 4rem;
   width: 4rem;
